// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches enzyme snapshots matches snapshot - unchecked 1`] = `
<div
  className="ToggleButton "
  onClick={[Function]}
>
  <span
    className="ToggleButton-title"
  >
    Testing
  </span>
</div>
`;

exports[`matches enzyme snapshots matches snapshot 1`] = `
<div
  className="ToggleButton checked"
  onClick={[Function]}
>
  <span
    className="ToggleButton-title"
  >
    Testing
  </span>
</div>
`;

exports[`matches test renderer snapshot serializes the styles 1`] = `
<div
  className="ToggleButton checked"
  onClick={[Function]}
>
  <span
    className="ToggleButton-title"
  >
    Testing
  </span>
</div>
`;
